# forkwatch

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md
backend/: Cargo.toml  Dockerfile
backend/src/: db.rs  ingest.rs  main.rs  miner.rs  model.rs  rdts.rs  rpc.rs
compose/: .env.example  .env.prod.example  docker-compose.mainnet.yml  docker-compose.prod.yml  docker-compose.regtest.yml  regtest.env
compose/cloudflared/: config.example.yml
compose/nginx/: forkwatch.conf
e2e/: demo.sh  run.sh  trigger_fork.sh
e2e/lib/: common.sh  dep.py  wait_fork.py
e2e/scenarios/: fork_on_violation.sh
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  eta.ts  index.css  iso.ts  main.tsx  store.ts  types.ts  util.ts
frontend/src/components/: BottomScrubber.tsx  EpochRail.tsx  ErrorBoundary.tsx  Header.tsx  IsoBlock.tsx  IsometricChain.tsx  RaceRail.tsx  ScrollRail.tsx  SegmentClock.tsx  StatusBanner.tsx  ViolationStickers.tsx
frontend/src/hooks/: useBreakpoint.ts  useChainSocket.ts  useNow.ts  useScrollFocus.ts
mdns/: Dockerfile  publish.sh
miner/: Dockerfile  miner.py
nodes/core/: Dockerfile  entrypoint.sh  mainnet.conf  regtest.conf
nodes/knots/: Dockerfile  entrypoint.sh  mainnet.conf  regtest.conf
scripts/: clear-db.sh  deploy-prod.sh  regtest.sh  regtest_build.py
tor/: Dockerfile  torrc
