[package]
name = "forkwars-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forkwars-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
# `limit` provides ConcurrencyLimitLayer: a backstop on in-flight requests so a traffic spike costs
# latency rather than memory. Paired with the request timeout, over-limit work is shed, not queued
# indefinitely.
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = [
    "fs", "cors", "compression-gzip", "compression-br", "trace", "set-header", "timeout",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
bitcoin = "0.32"
base64 = "0.22"
hex = "0.4"
anyhow = "1"
# No lock poisoning: a panic under a guard must not take the process down permanently, and the
# writer-fair acquisition keeps the ingest thread from being starved by sustained reads.
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 2
